k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tictactoe-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: tictactoe-dev-service
            port:
              number: 80

      - path: /prod
        pathType: Prefix
        backend:
          service:
            name: tictactoe-prod-service
            port:
              number: 80
